# realtime_chat

./: .gitignore  Makefile  docker-compose.yaml  nginx.conf  pg_hba.conf
.github/workflows/: lint_and_types.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml  start.sh
backend/src/app/: depends.py  middlewares.py  routers.py  web.py
backend/src/app/adapters/sqlalchemy_db/: uow.py
backend/src/app/adapters/sqlalchemy_db/migrations/: env.py
backend/src/app/adapters/sqlalchemy_db/migrations/versions/: 19c044807e81_.py  1ca190c726e1_.py
backend/src/app/adapters/sqlalchemy_db/models/: base.py  user.py
backend/src/app/adapters/sqlalchemy_db/repositories/: user.py
backend/src/app/api/schemas/: user.py
backend/src/app/api/v1/: root.py  user.py
backend/src/app/common/: exceptions.py  settings.py
backend/src/app/domain/models/: user.py
backend/src/app/ports/: repository.py  uow.py
backend/src/app/ports/repositories/: user.py
backend/src/app/services/: user.py
