[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["wannasleep <wannasleeprightnowww@gmail.com>"]
readme = "README.md"
packages = [
  { include = "app", from="src" },
  { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
app = "^0.0.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"
fastapi = "^0.114.2"
pydantic-settings = "^2.5.2"
sqlalchemy = "^2.0.35"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
uvicorn = "^0.30.6"
black = "^24.8.0"

[tool.black]
line-length = 79
target-version = ['py312']
skip-magic-trailing-comma = false

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q", "N", "ANN", "PL"]
ignore = ["ANN101"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.lint.flake8-type-checking]
quote-annotations = true
strict = true

[tool.ruff.lint.isort]
case-sensitive = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
